# BOIDS

./: CMakeLists.txt
data/: 15_fish_4_reefs_tank.txt  2_different_balls.txt  fish_tank_2_reefs.txt
src/: main.cpp
src/Lsystem/: Branch.cpp  Branch.h  DrawBranches.cpp  DrawBranches.h
src/boid/: BoundaryDetector.cpp  BoundaryDetector.h  CollisionDetector.cpp  CollisionDetector.h  Cylinder.cpp  Cylinder.h  DrawObjects.cpp  DrawObjects.h  Fish.cpp  Fish.h  Geometry.cpp  Geometry.h  Object.cpp  Object.h  Predator.cpp  Predator.h  Prey.cpp  Prey.h
src/matrix/: CameraFlattenedMatrix.cpp  CameraFlattenedMatrix.h  RotationHelper.cpp  RotationHelper.h  VectorCalculation.cpp  VectorCalculation.h
src/setup/: PhysicsPrefs.cpp  PhysicsPrefs.h  PhysicsSetupFileLoader.cpp  PhysicsSetupFileLoader.h  ScenePrefs.cpp  ScenePrefs.h  SceneSetupFileLoader.cpp  SceneSetupFileLoader.h  SimpleObjLoader.cpp  SimpleObjLoader.h
src/ui/: StringUtils.cpp  StringUtils.h  UserInputManager.cpp  UserInputManager.h
